--- a/Section14/src/app/tasks/new-task/new-task.component.html
+++ b/Section14/src/app/tasks/new-task/new-task.component.html
@@ -11,8 +11,7 @@
       id="summary"
       rows="5"
       name="summary"
-      [(ngModel)]="enteredSummary"
-    ></textarea>
+      [(ngModel)]="enteredSummary"></textarea>
   </p>
 
   <p>
@@ -21,12 +20,11 @@
       type="date"
       id="due-date"
       name="due-date"
-      [(ngModel)]="enteredDate"
-    />
+      [(ngModel)]="enteredDate" />
   </p>
 
   <p class="actions">
-    <a>Cancel</a>
+    <a routerLink="../">Cancel</a>
     <button type="submit">Create</button>
   </p>
 </form>
